# napari-psf-simulator

./: 6.0.0  LICENSE  README.md  _widget_runner.py  _widget_runner_with_multiple aberrations.py  mkdocs.yml  psf_widget_runner.py  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.napari/: config.yml
docs/: index.md  pyfocus_seminar.pptx
napari-venv/: pyvenv.cfg
src/: _widget_runner.py  _widget_runner_with_multiple aberrations.py
src/napari_psf_simulator/: SIM_pupil.py  _SIM_pupil.py  __init__.py  _calculator.py  _calculator_widget.py  _contrast_widget.py  _gui_utils.py  _psf_generator.py  _widget.py  _widget_runner.py  aberrations.py  gui_utils.py  napari.yaml  psf_generator.py  run_widget.py  zernike_polynomials.py
src/napari_psf_simulator/_tests/: test_widget.py
src/napari_psf_simulator/auxiliary_functions/: PyFocus_auxiliary_functions.py
src/napari_psf_simulator/auxiliary_handlers/: PyFocus_auxiliary_handler.py
src/napari_psf_simulator/psf_packages/: SIM_pupil.py  psf_generator.py
src/napari_psf_simulator/psf_submodules/: __init__.py  aberrations.py  gui_utils.py  normalize_intensity.py  psf_generator.py  sim_pupil.py  subsection.py  switchable_layout.py
src/napari_psf_simulator/psf_submodules/old/: _aberrations.py
